Fix font-weight and spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,9 @@ body {
 button {
   padding-bottom: 2px;
 }
+h1, h2, h3, h4, h5 {
+  font-weight: 300 !important;
+}
 .home-container {
   background-image: url(/img/lib.jpg);
   background-size: cover;
@@ -48,13 +51,13 @@ button {
 }
 .splash-login, .splash-view {
   text-align: center;
-  margin-top: 1vh;
-  margin-bottom: 2vh;
+  margin-top: 2vh;
+  margin-bottom: 2.5vh;
 }
 .splash-browse {
   text-align: center;
-  margin-top: 1.2vh;
-  margin-bottom: 2vh;
+  margin-top: 2vh;
+  margin-bottom: 2.5vh;
 }
 .splash-or {
   border-top: 1px solid gray;
